...
      return;
    }
    setPage(page + 1);
    fetchMasterUsers();
  };
  return (
    <View style={styles.container} testID='masterUserScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={masterUserList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
