...
    <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID='entityScreenScrollList'>
      <Text style={styles.centerText}>JHipster Entities will appear below</Text>
      <RoundedButton text='MessageGroup' onPress={() => navigation.navigate('MessageGroup')} testID='messageGroupEntityScreenButton' />
      <RoundedButton
        text='MessageContent'
        onPress={() => navigation.navigate('MessageContent')}
        testID='messageContentEntityScreenButton'
      />
      <RoundedButton text='HanhChinhVN' onPress={() => navigation.navigate('HanhChinhVN')} testID='hanhChinhVNEntityScreenButton' />
      <RoundedButton text='MasterUser' onPress={() => navigation.navigate('MasterUser')} testID='masterUserEntityScreenButton' />
      <RoundedButton text='UserProfile' onPress={() => navigation.navigate('UserProfile')} testID='userProfileEntityScreenButton' />
      <RoundedButton text='AccountStatus' onPress={() => navigation.navigate('AccountStatus')} testID='accountStatusEntityScreenButton' />
      <RoundedButton text='DeviceStatus' onPress={() => navigation.navigate('DeviceStatus')} testID='deviceStatusEntityScreenButton' />
      <RoundedButton text='Friend' onPress={() => navigation.navigate('Friend')} testID='friendEntityScreenButton' />
      <RoundedButton text='FollowUser' onPress={() => navigation.navigate('FollowUser')} testID='followUserEntityScreenButton' />
      <RoundedButton text='FollowGroup' onPress={() => navigation.navigate('FollowGroup')} testID='followGroupEntityScreenButton' />
...
