...
      return;
    }
    setPage(page + 1);
    fetchMessageContents();
  };
  return (
    <View style={styles.container} testID='messageContentScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={messageContentList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
